<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/branco"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mutti.interusp_android.Gritos">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/icon_poli"
                android:id="@+id/button50"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo1Poli"
                android:textSize= "25sp"
                android:textStyle = "bold|normal"
                android:textColor="@color/preto"
                android:id="@+id/textView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:layout_below="@+id/textView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/grito1Poli"
                android:maxLines="0"
                android:ellipsize="end"
                android:textSize="16sp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo2Poli"
                android:id="@+id/textView4"
                android:layout_below="@+id/textView3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize= "25sp"
                android:textStyle = "bold|normal"
                android:textColor="@color/preto"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grito2Poli"
                android:id="@+id/textView5"
                android:layout_below="@+id/textView4"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:maxLines="0"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo3Poli"
                android:id="@+id/textView6"
                android:layout_below="@+id/textView5"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize= "25sp"
                android:textStyle = "bold|normal"
                android:textColor="@color/preto"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grito3Poli"
                android:id="@+id/textView7"
                android:layout_below="@+id/textView6"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:maxLines="0"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo4Poli"
                android:id="@+id/textView8"
                android:layout_below="@+id/textView7"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize= "25sp"
                android:textStyle = "bold|normal"
                android:textColor="@color/preto"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grito4Poli"
                android:id="@+id/textView9"
                android:layout_below="@+id/textView8"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:maxLines="0"
                android:textSize="16sp"
                />
        </LinearLayout>
    </ScrollView>




</RelativeLayout>
